package com.randioo.mahjong_public_server.protocol;
import "Login.proto";
import "Role.proto";
import "Match.proto";
import "Fight.proto";
import "MoneyExchange.proto";
import "Settings.proto";
import "Race.proto";
import "Heart.proto";

message SC{
	optional HeartResponse HeartResponse = 1;//心跳回馈
	optional SCHeart SCHeart = 2;//心跳主推

	optional LoginCheckAccountResponse LoginCheckAccountResponse = 3;
	optional LoginCreateRoleResponse LoginCreateRoleResponse = 4;
	optional LoginGetRoleDataResponse LoginGetRoleDataResponse = 5;
	optional SCLoginOtherSide SCLoginOtherSide = 6;

	optional RoleRenameResponse RoleRenameResponse = 7;
	optional RoleGetRoleDataResponse RoleGetRoleDataResponse = 8;

	optional MatchCreateGameResponse MatchCreateGameResponse = 9;
	optional MatchJoinGameResponse MatchJoinGameResponse = 10;
	optional SCMatchJoinGame SCMatchJoinGame = 11;
	optional SCMatchMineInfo SCMatchMineInfo = 12;
	optional SCMatchCreateGame SCMatchCreateGame = 13;

	optional SCFightNoticeReady SCFightNoticeReady = 14;
	optional FightReadyResponse FightReadyResponse = 15;//准备(只有好友对战用)
	optional SCFightReady SCFightReady = 16;//某玩家进行准备
	optional SCFightStart SCFightStart = 17;//游戏开始
	optional FightExitGameResponse FightExitGameResponse = 18;//游戏退出
	optional SCFightExitGame SCFightExitGame = 19;//某玩家游戏退出
	optional FightApplyExitGameResponse FightApplyExitGameResponse = 20;
	optional SCFightApplyExitGame SCFightApplyExitGame = 21;//某玩家申请游戏退出
	optional FightAgreeExitGameResponse FightAgreeExitGameResponse = 22;//同意游戏退出
	optional SCFightGameDismiss SCFightGameDismiss = 23;//游戏解散
	optional SCFightLoadResource SCFightLoadResource = 24;//游戏资源加载(用于匹配)
	optional SCFightNoticeSendCard SCFightNoticeSendCard = 25;//通知出牌
	optional FightSendCardResponse FightSendCardResponse = 26;
	optional SCFightSendCard SCFightSendCard = 27;
	optional SCAgreeExitGame SCAgreeExitGame = 28;
	optional SCFightRoundOver SCFightRoundOver = 29;
	optional FightRecommandResponse FightRecommandResponse = 30;
	optional SCFightGameOver SCFightGameOver = 31;
	optional FightGetlastRoundResponse FightGetlastRoundResponse = 32;
	optional SCFightTouchCard SCFightTouchCard = 33;//摸一张牌
	optional SCFightNoticeChooseCardList SCFightNoticeChooseCardList = 34;//通知所有人的杠碰胡
	optional FightPengResponse FightPengResponse = 35;
	optional FightGangResponse FightGangResponse = 36;
	optional FightHuResponse FightHuResponse = 37;
	optional SCFightHu SCFightHu = 38;
	optional FightGuoResponse FightGuoResponse = 39;
	optional SCFightGuo SCFightGuo = 40;
	optional SCFightCountdown SCFightCountdown = 41;
	optional SCFightCardList SCFightCardList = 42;
	optional SCFightPointSeat SCFightPointSeat = 43;
	optional SCFightApplyExitResult SCFightApplyExitResult = 44;//申请退出的结果
	optional SCFightDisconnect SCFightDisconnect = 45;//通知玩家断连
	optional FightChiResponse FightChiResponse = 46;//吃的响应

	optional MoneyExchangeResponse MoneyExchangeResponse = 47;//燃点币游戏币（欢乐豆）互换
	
	optional SettingsResponse SettingsResponse = 48;//设置
	optional SettingsShowResponse SettingsShowResponse = 49;//设置

	optional RaceJoinRaceResponse RaceJoinRaceResponse = 50;
	optional SCRaceJoinRace SCRaceJoinRace = 51;
	optional RaceShowQueueResponse RaceShowQueueResponse = 52;
	optional SCRaceQueueChange SCRaceQueueChange = 53;

	optional MatchCheckRoomResponse MatchCheckRoomResponse = 54;// 检查房间号
} // 54
